<resources>
    <string name="AppName">telepatch</string>
    <string name="LanguageName">English</string>
    <string name="LanguageNameInEnglish">English</string>
    <string name="LanguageCode">en</string>
    <string name="YourPhone">Your phone</string>
    <string name="StartText">Please confirm your country code\nand enter your phone number.</string>
    <string name="ChooseCountry">Choose a country</string>
    <string name="WrongCountry">Wrong country code</string>
    <string name="YourCode">Your code</string>
    <string name="SentSmsCode">We\'ve sent an SMS with an activation code to your phone</string>
    <string name="CallText">We will call you in %1$d:%2$02d</string>
    <string name="Calling">Calling you...</string>
    <string name="Code">Code</string>
    <string name="WrongNumber">Wrong number?</string>
    <string name="DidNotGetTheCode">Didn\'t get the code?</string>
    <string name="YourName">Your name</string>
    <string name="RegisterText">Set up your first and last name</string>
    <string name="FirstName">First name (required)</string>
    <string name="LastName">Last name (optional)</string>
    <string name="CancelRegistration">Cancel registration</string>
    <string name="Chats">Chats</string>
    <string name="Search">Search</string>
    <string name="NewMessages">New messages</string>
    <string name="Settings">Settings</string>
    <string name="Contacts">Contacts</string>
    <string name="NewGroup">New Group</string>
    <string name="Yesterday">yesterday</string>
    <string name="NoResult">No results</string>
    <string name="NoChats">No chats yet...</string>
    <string name="NoChatsHelp">Start messaging by pressing the\ncompose button in the top right corner\nor tap the menu button for more options.</string>
    <string name="WaitingForNetwork">Waiting for network...</string>
    <string name="Connecting">Connecting...</string>
    <string name="Updating">Updating...</string>
    <string name="NewSecretChat">New Secret Chat</string>
    <string name="AwaitingEncryption">Waiting for %s to get online...</string>
    <string name="EncryptionRejected">Secret chat cancelled</string>
    <string name="EncryptionProcessing">Exchanging encryption keys...</string>
    <string name="EncryptedChatStartedOutgoing">%s joined your secret chat.</string>
    <string name="EncryptedChatStartedIncoming">You joined the secret chat.</string>
    <string name="ClearHistory">Clear History</string>
    <string name="DeleteChat">Delete and exit</string>
    <string name="HiddenName">Hidden Name</string>
    <string name="SelectChat">Select Chat</string>
    <string name="PhotoTip">Tap and hold to view</string>
    <string name="CompatibilityChat">%1$s is using an older version of telepatch, so secret photos will be shown in compatibility mode.\n\nOnce %2$s updates telepatch, photos with timers for 1 minute or less will start working in \'Tap and hold to view\' mode, and you will be notified whenever the other party takes a screenshot.</string>
    <string name="BroadcastList">Broadcast List</string>
    <string name="NewBroadcastList">New Broadcast List</string>
    <string name="EnterListName">Enter list name</string>
    <string name="YouCreatedBroadcastList">You created a broadcast list</string>
    <string name="AddRecipient">Add Recipient</string>
    <string name="KickFromBroadcast">Remove from broadcast list</string>
    <string name="SelectFile">Select File</string>
    <string name="FreeOfTotal">Free %1$s of %2$s</string>
    <string name="UnknownError">Unknown error</string>
    <string name="AccessError">Access error</string>
    <string name="NoFiles">No files yet...</string>
    <string name="FileUploadLimit">File size shouldn\'t be greater than %1$s</string>
    <string name="NotMounted">Storage not mounted</string>
    <string name="UsbActive">USB transfer active</string>
    <string name="InternalStorage">Internal Storage</string>
    <string name="ExternalStorage">External Storage</string>
    <string name="SystemRoot">System Root</string>
    <string name="SdCard">SD Card</string>
    <string name="Invisible">invisible</string>
    <string name="Typing">typing...</string>
    <string name="Attach">Attach</string>
    <string name="IsTyping">is typing...</string>
    <string name="AreTyping">are typing...</string>
    <string name="GotAQuestion">Got a question\nabout telepatch?</string>
    <string name="ChatTakePhoto">Take photo</string>
    <string name="ChatGallery">Gallery</string>
    <string name="ChatLocation">Location</string>
    <string name="ChatVideo">Video</string>
    <string name="ChatDocument">Document</string>
    <string name="NoMessages">No messages here yet...</string>
    <string name="ViewPhoto">View Photo</string>
    <string name="ViewLocation">View Location</string>
    <string name="ViewVideo">Play Video</string>
    <string name="ForwardedMessage">Forwarded message</string>
    <string name="From">From</string>
    <string name="NoRecent">No recent</string>
    <string name="Message">Message</string>
    <string name="TypeMessage">Type message</string>
    <string name="DOWNLOAD">Download</string>
    <string name="Selected">Selected: %d</string>
    <string name="ShareMyContactInfo">SHARE MY CONTACT INFO</string>
    <string name="AddToContacts">ADD TO CONTACTS</string>
    <string name="EncryptedPlaceholderTitleIncoming">%s invited you to join a secret chat.</string>
    <string name="EncryptedPlaceholderTitleOutgoing">You have invited %s to join a secret chat.</string>
    <string name="EncryptedDescriptionTitle">Secret chats:</string>
    <string name="EncryptedDescription1">Use end-to-end encryption</string>
    <string name="EncryptedDescription2">Leave no trace on our servers</string>
    <string name="EncryptedDescription3">Have a self-destruct timer</string>
    <string name="EncryptedDescription4">Do not allow forwarding</string>
    <string name="YouWereKicked">You were removed from this group</string>
    <string name="YouLeft">You left this group</string>
    <string name="DeleteThisGroup">Delete this group</string>
    <string name="DeleteThisChat">Delete this chat</string>
    <string name="SlideToCancel">SLIDE TO CANCEL</string>
    <string name="SaveToDownloads">Save to downloads</string>
    <string name="ApplyLocalizationFile">Apply localization file</string>
    <string name="UnsupportedAttachment">Unsupported attachment</string>
    <string name="EncryptedChatRequested">Secret chat requested</string>
    <string name="EncryptedChatAccepted">Secret chat started</string>
    <string name="MessageLifetimeChanged">%1$s set the self-destruct timer to %2$s</string>
    <string name="MessageLifetimeChangedOutgoing">You set the self-destruct timer to %1$s</string>
    <string name="MessageLifetimeRemoved">%1$s disabled the self-destruct timer</string>
    <string name="MessageLifetimeYouRemoved">You disabled the self-destruct timer</string>
    <string name="YouHaveNewMessage">You have a new message</string>
    <string name="NotificationMessageText">%1$s (%2$s)</string>
    <string name="NotificationMessageNoText">%1$s sent you a message</string>
    <string name="NotificationMessagePhoto">%1$s sent you a photo</string>
    <string name="NotificationMessageVideo">%1$s sent you a video</string>
    <string name="NotificationMessageContact">%1$s shared a contact with you</string>
    <string name="NotificationMessageMap">%1$s sent you a location</string>
    <string name="NotificationMessageDocument">%1$s sent you a document</string>
    <string name="NotificationMessageAudio">%1$s sent you an audio</string>
    <string name="NotificationMessageGroupText">%1$s @ %2$s: %3$s</string>
    <string name="NotificationMessageGroupNoText">%1$s sent a message to the group %2$s</string>
    <string name="NotificationMessageGroupPhoto">%1$s sent a photo to the group %2$s</string>
    <string name="NotificationMessageGroupVideo">%1$s sent a video to the group %2$s</string>
    <string name="NotificationMessageGroupContact">%1$s shared a contact in the group %2$s</string>
    <string name="NotificationMessageGroupMap">%1$s sent a location to the group %2$s</string>
    <string name="NotificationMessageGroupDocument">%1$s sent a document to the group %2$s</string>
    <string name="NotificationMessageGroupAudio">%1$s sent an audio to the group %2$s</string>
    <string name="NotificationInvitedToGroup">%1$s invited you to the group %2$s</string>
    <string name="NotificationEditedGroupName">%1$s edited the group\'s %2$s name</string>
    <string name="NotificationEditedGroupPhoto">%1$s edited the group\'s %2$s photo</string>
    <string name="NotificationGroupAddMember">%1$s invited %3$s to the group %2$s</string>
    <string name="NotificationGroupKickMember">%1$s removed %3$s from the group %2$s</string>
    <string name="NotificationGroupKickYou">%1$s removed you from the group %2$s</string>
    <string name="NotificationGroupLeftMember">%1$s has left the group %2$s</string>
    <string name="NotificationContactJoined">%1$s joined telepatch!</string>
    <string name="NotificationUnrecognizedDevice">%1$s,\nWe detected a login into your account from a new device on %2$s\n\nDevice: %3$s\nLocation: %4$s\n\nIf this wasn\'t you, you can go to Settings - Terminate all sessions.\n\nSincerely,\nThe telepatch Team</string>
    <string name="NotificationContactNewPhoto">%1$s updated profile photo</string>
    <string name="Reply">Reply</string>
    <string name="ReplyToGroup">Reply to %1$s</string>
    <string name="ReplyToUser">Reply to %1$s</string>
    <string name="NotificationMessagesPeopleDisplayOrder">%1$s %2$s</string>
    <string name="SelectContact">Select Contact</string>
    <string name="NoContacts">No contacts yet</string>
    <string name="InviteText">Hey, let\'s switch to telepatch: http://telepatch.org/dl2</string>
    <string name="TodayAt">today at</string>
    <string name="YesterdayAt">yesterday at</string>
    <string name="Online">online</string>
    <string name="Offline">offline</string>
    <string name="LastSeen">last seen</string>
    <string name="LastSeenDate">last seen</string>
    <string name="InviteFriends">Invite Friends</string>
    <string name="GlobalSearch">GLOBAL SEARCH</string>
    <string name="SendMessageTo">Send message to...</string>
    <string name="EnterGroupNamePlaceholder">Enter group name</string>
    <string name="GroupName">Group name</string>
    <string name="AllContacts">ALL CONTACTS</string>
    <string name="MembersCount">%1$d/%2$d members</string>
    <string name="EnterGroupNameTitle">ENTER GROUP NAME</string>
    <string name="SharedMedia">Shared Media</string>
    <string name="GroupInfo">Group Info</string>
    <string name="SHAREDMEDIA">SHARED MEDIA</string>
    <string name="SETTINGS">SETTINGS</string>
    <string name="AddMember">Add member</string>
    <string name="DeleteAndExit">Delete and leave group</string>
    <string name="Notifications">Notifications</string>
    <string name="KickFromGroup">Remove from group</string>
    <string name="ShareContact">Share</string>
    <string name="AddContact">Add</string>
    <string name="BlockContact">Block</string>
    <string name="EditContact">Edit</string>
    <string name="DeleteContact">Delete</string>
    <string name="PhoneHome">HOME</string>
    <string name="PhoneMobile">MOBILE</string>
    <string name="PhoneWork">WORK</string>
    <string name="PhoneOther">OTHER</string>
    <string name="PhoneMain">MAIN</string>
    <string name="ContactInfo">Contact Info</string>
    <string name="PHONE">PHONE</string>
    <string name="StartEncryptedChat">Start Secret Chat</string>
    <string name="press_vibrate_long">Long vibration</string>
    <string name="press_vibrate_short">Short vibration</string>
    <string name="vibration_pattern_save">Save</string>
    <string name="vibration_pattern_cancel">Cancel</string>
    <string name="vibrate_pause">Pause</string>
</resources>